<resources>
    <string name="app_name">Capstone</string>
    <string name="log_in">Log in</string>
    <string name="title_door">Door</string>
    <string name="title_box">Box</string>
    <string name="title_cctv">CCTV</string>
    <string name="title_set">Set</string>
    <string name="option_setting">알림 설정</string>
    <string name="option_password">비밀번호 변경</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="door">출입문</string>
    <string name="box">보관함</string>
    <string name="doorlock_open">도어락 열림</string>
    <string name="password_error">비밀번호 오류</string>
    <string name="cancellation">취 소</string>
    <string name="check">저 장</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="save">저 장</string>
    <string name="blank"></string>
    <string name="enter_password">비밀번호 입력</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="streamStart">카메라 확인</string>
</resources>
