<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/set_big_bg"
    android:orientation="vertical"
    tools:context=".Fragments.SetFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="90dp"
        android:text="@string/door"
        android:textColor="@android:color/black"
        android:textSize="30dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="160dp"
        android:text="@string/doorlock_open"
        android:textColor="@android:color/black"
        android:textSize="25dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="210dp"
        android:text="@string/password_error"
        android:textColor="@android:color/black"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="320dp"
        android:text="@string/box"
        android:textColor="@android:color/black"
        android:textSize="30dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="390dp"
        android:text="@string/doorlock_open"
        android:textColor="@android:color/black"
        android:textSize="25dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="440dp"
        android:text="@string/password_error"
        android:textColor="@android:color/black"
        android:textSize="25dp" />


    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="160dp"
        android:layout_marginRight="81dp"
        android:text="@string/blank"
        android:textSize="25dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="160dp"
        android:layout_marginRight="130dp"
        android:text="@string/off"
        android:textColor="@android:color/black"
        android:textSize="23dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="160dp"
        android:layout_marginRight="43dp"
        android:text="@string/on"
        android:textColor="@android:color/black"
        android:textSize="23dp" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="210dp"
        android:layout_marginRight="81dp"
        android:text="@string/blank"
        android:textSize="25dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="210dp"
        android:layout_marginRight="130dp"
        android:text="@string/off"
        android:textColor="@android:color/black"
        android:textSize="23dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"

        android:layout_marginTop="210dp"
        android:layout_marginRight="43dp"
        android:text="@string/on"
        android:textColor="@android:color/black"
        android:textSize="23dp" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="390dp"
        android:layout_marginRight="81dp"
        android:text="@string/blank"
        android:textSize="25dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="390dp"
        android:layout_marginRight="130dp"
        android:text="@string/off"
        android:textColor="@android:color/black"
        android:textSize="23dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="390dp"
        android:layout_marginRight="43dp"
        android:text="@string/on"
        android:textColor="@android:color/black"
        android:textSize="23dp" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="440dp"
        android:layout_marginRight="81dp"
        android:text="@string/blank"
        android:textSize="25dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="440dp"
        android:layout_marginRight="130dp"
        android:text="@string/off"
        android:textColor="@android:color/black"
        android:textSize="23dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="440dp"
        android:layout_marginRight="43dp"
        android:text="@string/on"
        android:textColor="@android:color/black"
        android:textSize="23dp" />

</RelativeLayout>